make animation and responsive animation

--- a/src/style/App.css
+++ b/src/style/App.css
@@ -172,4 +172,9 @@
   cursor: default;
 }
 
+.move-count {
+  text-align: right;
+  margin: 15px 15px 0 0;
+}
 
+/* --------------------------------------- */
