--- a/src/style/App.css
+++ b/src/style/App.css
@@ -3,7 +3,7 @@
 }
 
 :root {
-  --width: 360px;
+  --width: 240px;
 }
 
 #root {
@@ -14,7 +14,7 @@
 
 .flex {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
 }
 
@@ -127,7 +127,7 @@ button:disabled {
 /* --------------------------------------- */
 
 .content__actions {
-  margin-bottom: 15px;
+  margin-bottom: 5px;
 }
 
 .content__actions-game {
@@ -139,10 +139,15 @@ button:disabled {
   height: 35px;
   padding-left: 5px;
   padding-right: 5px;
+  font-size: 10px;
 }
 
 .content__actions-game:not([disabled]):hover {
   opacity: 0.7;
+}
+
+.icon-text {
+  font-size: 10px;
 }
 
 .icon-text::after {
